2025-02-aks-with-terraform/07-front-door/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-store-front
  namespace: aks-store
spec:
  ingressClassName: nginx-internal
  rules:
    - host: app.remi-solutions.com
      http:
        paths:
          - backend:
              service:
                name: store-front
                port:
                  number: 80
            path: /
            pathType: Prefix
